# boxxy-rs

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  cboxxy.c
.github/workflows/: rust.yml
autoboxxy/: Cargo.toml  README.md  boxxy.php
autoboxxy/src/: lib.rs
ci/: build.sh  install.sh  test.sh
ci/dummy/: README.md
contrib/: aws-wrapper.py
docs/: tls-revshell.md
examples/: boxxy-ipc.rs  boxxy.rs  fingerprint.rs  ipc-boxxy.rs  ipc-listener.rs  lambdash.rs  objdump.rs  vuln-chroot.rs
include/: boxxy.h
lambdash/: Cargo.toml
lambdash/src/: errors.rs  main.rs
sc/: .gitignore  ohai.asm  ret.asm
src/: completer.rs  crypto.rs  ctrl.rs  errors.rs  ffi.rs  interface.rs  lib.rs  macros.rs  shell.rs
src/busybox/: disk.rs  foo.rs  kernel.rs  meta.rs  mod.rs  network.rs  privs.rs  procs.rs
src/busybox/disk/: cat.rs  cd.rs  chmod.rs  chown.rs  chroot.rs  fchdir.rs  fds.rs  grep.rs  ls.rs  mkdir.rs  mod.rs  mount.rs  pwd.rs  rm.rs  tar.rs
src/busybox/meta/: downgrade.rs  echo.rs  help.rs  mod.rs
src/busybox/network/: curl.rs  ipcshell.rs  mod.rs  revshell.rs
src/busybox/privs/: caps.rs  id.rs  keepcaps.rs  mod.rs  pledge.rs  seteuid.rs  setgid.rs  setgroups.rs  setresgid.rs  setresuid.rs  setreuid.rs  setuid.rs
src/busybox/procs/: exec.rs  jit.rs  mod.rs
src/ffi/: exports.rs  linux.rs  mod.rs  notlinux.rs  unix.rs
