[package]
name = "boxxy"
version = "0.5.0"
description = "Linkable sandbox explorer"
authors = ["kpcyrd <git@rxv.cc>"]
license = "LGPL-3.0"
repository = "https://github.com/kpcyrd/boxxy-rs"
categories = ["command-line-interface", "development-tools::debugging"]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[badges]
travis-ci = { repository = "kpcyrd/boxxy-rs" }

[workspace]
members = ["autoboxxy", "lambdash"]

[features]
default = ["readline", "network", "archives"]
readline = ["rustyline"]
network = ["hyper", "hyper-rustls", "tokio-core", "futures",
           "rustls", "rust-crypto", "webpki"]
archives = ["tar", "libflate"]

[dependencies]
log = "0.4"
clap = { version = "2", default-features = false }
libc = "0.2"
errno = "0.2"
regex = "1.0"
nix = "0.11"
base64 = "0.9"
error-chain = "0.11"
bufstream = "0.1"
cfg-if = "0.1"
clippy = { version = "0.0.199", optional = true }

# disk: tar
tar = { version = "0.4", optional = true }
libflate = { version = "0.1.14", optional = true }

# network: revshell
rustls = { version = "0.12", features = ["dangerous_configuration"], optional = true }
rust-crypto = { version = "0.2", optional = true }
webpki = { version = "0.18.0-alpha", optional = true }

# network: curl
hyper = { version = "0.11", optional = true }
hyper-rustls = { version = "0.12", optional = true }
tokio-core = { version = "0.1", optional = true }
futures = { version = "0.1", optional = true }

[target.'cfg(not(target_os = "openbsd"))'.dependencies]
# readline
rustyline = { version = "1.0.0", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
caps = "0.2"

[dev-dependencies]
env_logger = "0.5"
elf = "0.0.10"
ctrlc = "3.1.0"
