[package]
name = "boxxy"
version = "0.11.0"
description = "Linkable sandbox explorer"
authors = ["kpcyrd <git@rxv.cc>"]
license = "LGPL-3.0"
repository = "https://github.com/kpcyrd/boxxy-rs"
categories = ["command-line-interface", "development-tools::debugging"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[badges]
travis-ci = { repository = "kpcyrd/boxxy-rs" }

[workspace]
members = ["autoboxxy", "lambdash"]

[features]
default = ["readline", "network"]
full = ["readline", "network", "archives"]
readline = ["rustyline"]
network = ["hyper", "hyper-rustls", "http", "url", "tokio-core", "futures",
           "rustls", "sha2", "webpki"]
archives = ["tar", "libflate"]

[dependencies]
log = "0.4"
clap = { version = "2", default-features = false }
libc = "0.2"
errno = "0.2"
regex = "1.0"
nix = "0.15"
base64 = "0.10"
error-chain = "0.12"
bufstream = "0.1"
cfg-if = "0.1"

# disk: tar
tar = { version = "0.4", optional = true }
libflate = { version = "0.1.14", optional = true }

# network: revshell
rustls = { version = "0.16", features = ["dangerous_configuration"], optional = true }
sha2 = { version = "0.8", optional = true }
webpki = { version = "0.21.0", optional = true }

# network: curl
hyper = { version = "0.12", optional = true }
hyper-rustls = { version = "0.17", optional = true }
http = { version = "0.1", optional = true }
url = { version = "2.0", optional = true }
tokio-core = { version = "0.1", optional = true }
futures = { version = "0.1", optional = true }

# readline
rustyline = { version = "5.0", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
caps = "0.3"

[target.'cfg(target_os="openbsd")'.dependencies]
pledge = "0.3"

[dev-dependencies]
env_logger = "0.6"
elf = "0.0.10"
ctrlc = "3.1.0"
