[package]
name = "boxxy"
version = "0.11.0"
description = "Linkable sandbox explorer"
authors = ["kpcyrd <git@rxv.cc>"]
license = "LGPL-3.0"
repository = "https://github.com/kpcyrd/boxxy-rs"
categories = ["command-line-interface", "development-tools::debugging"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[badges]
travis-ci = { repository = "kpcyrd/boxxy-rs" }

[workspace]
members = ["autoboxxy", "lambdash"]

[features]
default = ["readline"]
full = ["readline", "network", "archives"]
readline = ["rustyline"]
network = ["reqwest", "tokio", "futures-util",
           "rustls", "sha2", "webpki"]
archives = ["tar", "libflate"]

[dependencies]
log = "0.4"
clap = { version = "2", default-features = false }
libc = "0.2"
errno = "0.2"
regex = "1.0"
nix = "0.22"
base64 = "0.13"
anyhow = "1"
bufstream = "0.1"
cfg-if = "1"

# disk: tar
tar = { version = "0.4", optional = true }
libflate = { version = "1", optional = true }

# network: revshell
rustls = { version = "0.16", features = ["dangerous_configuration"], optional = true }
sha2 = { version = "0.9", optional = true }
webpki = { version = "0.21", optional = true }

# network: curl
reqwest = { version = "0.11", default-features=false, features=["stream", "rustls-tls-webpki-roots"], optional = true }
tokio = { version = "1", features=["fs", "macros"], optional = true }
futures-util = { version = "0.3.12",  optional = true }

# readline
rustyline = { version = "9", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
caps = "0.5"

[target.'cfg(target_os="openbsd")'.dependencies]
pledge = "0.4"

[dev-dependencies]
env_logger = "0.9"
elf = "0.0.10"
ctrlc = "3.1.0"
rustls = "0.16"
sha2 = "0.9"
