[package]
name = "autoboxxy"
version = "0.1.0"
description = "Linkable sandbox explorer, invoke on constructor"
authors = ["kpcyrd <git@rxv.cc>"]
license = "LGPL-3.0"
repository = "https://github.com/kpcyrd/boxxy-rs"
categories = ["development-tools::debugging"]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]

[dependencies.boxxy]
path = "../"
version = "0.4"
