[package]
name = "lambdash"
version = "0.1.0"
authors = ["kpcyrd <git@rxv.cc>"]

[dependencies]
rusoto_core = "0.32.0"
rusoto_sts = "0.32.0"
rusoto_lambda = "0.32.0"
structopt = "0.2.7"
zip = "0.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.9"
rustyline = "1.0.0"
error-chain = "0.11"
env_logger = "0.5"
log = "0.4"
