[package]
name = "lambdash"
version = "0.1.0"
authors = ["kpcyrd <git@rxv.cc>"]
edition = "2018"

[dependencies]
anyhow = "1"
rusoto_core = "0.47"
rusoto_sts = "0.47"
rusoto_lambda = "0.47"
structopt = "0.3"
zip = "0.5"
serde = "1"
serde_json = "1"
base64 = "0.13"
rustyline = "9"
env_logger = "0.9"
log = "0.4"
tokio = { version = "1", features=["macros"] }
bytes = "1.1.0"
